--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,5 +1,5 @@
-<nav>
-  <ul>
+<nav class="wrapper" style="--space: var(--space-xs)">
+  <ul role="list" class="cluster" style="margin:0">
     <li><a href="/">Home</a></li>
     <li><a href="/events">Events</a></li>
     <li><a href="/code-of-conduct">Code of Conduct</a></li>
