--- a/src/_includes/layouts/layout.njk
+++ b/src/_includes/layouts/layout.njk
@@ -13,6 +13,7 @@ layout: layouts/base.njk
     {% endif %}
   </div>
 </header>
+{% include 'curve.svg' %}
 
 <main class="flow">
   {{ content | safe }}
