--- a/src/_includes/event-list.njk
+++ b/src/_includes/event-list.njk
@@ -1,5 +1,5 @@
 <div class="card flow" style="--flow-space: .5em">
-  <time datetime="{{ item.data.date | htmlDateString }}">{{ item.data.date | readableDate("LLLL dd yyyy") }}</time>
-  <h3>{{ item.data.title }}</h3>
-  <p>{{ item.data.overview | safe }}</p>
+  <time datetime="{{ event.data.date | htmlDateString }}">{{ event.data.date | readableDate("LLLL dd yyyy") }}</time>
+  <h3>{{ event.data.title }}</h3>
+  <p>{{ event.data.overview | safe }}</p>
 </div>
