--- a/src/index.njk
+++ b/src/index.njk
@@ -7,27 +7,20 @@ description: "Exercitation mollit eiusmod exercitation aliquip reprehenderit. Co
 <section class="wrapper region flow">
   <h2 class="gradient-text">Upcoming events</h2>
   <div class="grid" data-layout="50-50" data-rows="masonry">
-    {%- for item in collections.events | reverse  | limit(2) -%}
+    {%- for event in collections.events | reverse  | limit(2) -%}
       {% include 'event-list.njk' %}
     {%- endfor -%}
   </div>
 </section>
 
-<section class="wrapper region flow prose">
-  <blockquote>
+<section class="dark-bg" style="--curve-color: var(--red-0)">
+  {% include 'curve.svg' %}
+  <div class="wrapper region flow prose">
     <h2>How do I register?</h2>
     <p>Culpa anim occaecat ad id nostrud id mollit elit minim qui cupidatat elit do dolor. Consectetur dolor nostrud consequat aliqua id in pariatur excepteur et non aliquip ipsum sunt quis. Nisi do reprehenderit duis sunt consequat occaecat ut. Dolore elit cillum adipisicing cupidatat exercitation. Tempor nulla incididunt ad exercitation sunt esse aute ut. Anim ad reprehenderit exercitation quis consequat ea ex occaecat do exercitation fugiat. Magna ex deserunt magna fugiat ea irure est aliquip amet.</p>
-  </blockquote>
-</section>
-
-{# <section class="dark-bg">
-  <div class="wrapper region flow prose">
-    <blockquote>
-      <h2>How do I register?</h2>
-      <p>Culpa anim occaecat ad id nostrud id mollit elit minim qui cupidatat elit do dolor. Consectetur dolor nostrud consequat aliqua id in pariatur excepteur et non aliquip ipsum sunt quis. Nisi do reprehenderit duis sunt consequat occaecat ut. Dolore elit cillum adipisicing cupidatat exercitation. Tempor nulla incididunt ad exercitation sunt esse aute ut. Anim ad reprehenderit exercitation quis consequat ea ex occaecat do exercitation fugiat. Magna ex deserunt magna fugiat ea irure est aliquip amet.</p>
-    </blockquote>
   </div>
-</section> #}
+</section>
+{% include 'curve.svg' %}
 
 <section class="wrapper region flow">
   <h2>About the organizers</h2>
